--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -40,24 +40,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exception exercise\n",
-    "\n",
-    "1. Create a non-notebook python script\n",
-    "2. In this script let the user create a new txt-file (same folder as the script)\n",
-    "3. Let the user input text. It can't be empty.\n",
-    "4. Close the file\n",
-    "5. Let the user input a filename to open and print the content of a file. (the file above).\n",
-    "6. Let the user append to the file and close.\n",
-    "\n",
-    "### Second run of this program\n",
-    "* Try having the text file you have created up to step 4 open when you do the last two steps.\n",
-    "* Handle all errors that can happen."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Assert\n",
     "Assert is a way of testing yourself and your code so no logicall errors of your own making stays.\n",
     "An assert throws an AssertionError but shouldn't be caught."
@@ -89,22 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m f_num \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3.4\u001b[39m\n\u001b[0;32m      6\u001b[0m s_num \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m4\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43minteger_addition\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf_num\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ms_num\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[16], line 2\u001b[0m, in \u001b[0;36minteger_addition\u001b[1;34m(first_num, second_num)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minteger_addition\u001b[39m(first_num, second_num):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(first_num, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(second_num, \u001b[38;5;28mint\u001b[39m)\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m first_num\u001b[38;5;241m+\u001b[39msecond_num\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def integer_addition(first_num, second_num):\n",
     "    assert isinstance(first_num, int) and isinstance(second_num, int)\n",
@@ -114,6 +83,85 @@
     "s_num = \"4\"\n",
     "\n",
     "print(integer_addition(f_num, s_num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logging\n",
+    "\n",
+    "`import logging`\n",
+    "but logging takes config and you need to set the configs first.\n",
+    "\n",
+    "You can log to terminal but it´s rarely usefull.\n",
+    "`filename =` 'your_log' sets a target\n",
+    "`filemode =` default is 'a' as in append but you can change this.\n",
+    "`level =` sets a logging level target, that is, everything more severe than this will be logged. (Default is warning)\n",
+    "`format =` sets the format of your printet text, common pieces are a timestamp, the log level and a message, sometimes with the stacktrace. \n",
+    "\n",
+    "### Logging errors\n",
+    "Error can be logged inside an except\n",
+    "`logging.error(\"Exception exception happended\", exc_info = True)`\n",
+    "The last part adds stacktrace\n",
+    "or identical outcome:\n",
+    "`logging.exception(\"Exception exception happended\")`\n",
+    "Only to be called inside an except and automatically adds stacktrace and loggs an error on level = ERROR.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "import random\n",
+    "\n",
+    "logging.basicConfig(filename= '..\\\\resources\\\\diceLogg.txt',level = logging.WARNING, format = ' %(asctime)s -  %(levelname)s - %(message)s') \n",
+    "\n",
+    "def roll_dice(sides):\n",
+    "    my_roll = random.randint(1,sides)\n",
+    "    logging.debug(my_roll)\n",
+    "    if 0 < sides and my_roll <= sides:\n",
+    "        return my_roll\n",
+    "    else:\n",
+    "        logging.error('Well that dice is loaded...', my_roll)\n",
+    "        assert 0 < my_roll <= sides, 'dice with an extra side or negative sides'\n",
+    "\n",
+    "while True:\n",
+    "    dice_sides = int(input('Number of sides: '))\n",
+    "    if dice_sides <= 0:\n",
+    "        logging.warning('Dice number set to less than 0 or 0')\n",
+    "        print('Dice needs sides...')\n",
+    "        continue\n",
+    "    print(f'You rolled a {roll_dice(dice_sides)} on your dice')\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exception exercise\n",
+    "\n",
+    "1. Create a non-notebook python script\n",
+    "2. In this script let the user create a new txt-file (same folder as the script) inputing name.\n",
+    "3. Let the user input text. It can't be empty.\n",
+    "4. Close the file\n",
+    "5. Let the user input a filename to open and print the content of a file. (the file above).\n",
+    "6. Let the user append to the file and close.\n",
+    "\n",
+    "### Second run of this program\n",
+    "* Try having the text file you have created up to step 4 open in a texteditor when you do the last two steps.\n",
+    "* Any new errors\n",
+    "* Handle all errors that can happen.\n",
+    "\n",
+    "### Replace or add other ways of handling errors with Assertion\n",
+    "* Where do an assertion fit? Why?\n",
+    "\n",
+    "###\n",
+    "* Add logging with time, level and custom message."
    ]
   }
  ],
