Added examples and a log file from a demo

--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -71,16 +71,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "def integer_addition(first_num, second_num):\n",
     "    assert isinstance(first_num, int) and isinstance(second_num, int)\n",
     "    return first_num+second_num\n",
     "\n",
-    "f_num = 3.4\n",
-    "s_num = \"4\"\n",
+    "f_num = 4\n",
+    "s_num = 5\n",
+    "# s_num = 3.4 will throw an error\n",
     "\n",
     "print(integer_addition(f_num, s_num))"
    ]
@@ -111,18 +120,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You rolled a 4 on your dice\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import random\n",
     "\n",
-    "logging.basicConfig(filename= '..\\\\resources\\\\diceLogg.txt',level = logging.WARNING, format = ' %(asctime)s -  %(levelname)s - %(message)s') \n",
+    "logging.basicConfig(filename= 'diceLogg.txt',level = logging.DEBUG, format = ' %(asctime)s -  %(levelname)s - %(message)s') \n",
     "\n",
     "def roll_dice(sides):\n",
     "    my_roll = random.randint(1,sides)\n",
-    "    logging.debug(my_roll)\n",
+    "    logging.warning(my_roll)\n",
     "    if 0 < sides and my_roll <= sides:\n",
     "        return my_roll\n",
     "    else:\n",
