--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -71,17 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def integer_addition(first_num, second_num):\n",
     "    assert isinstance(first_num, int) and isinstance(second_num, int)\n",
@@ -120,26 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You rolled a 4 on your dice\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "import random\n",
     "\n",
-    "logging.basicConfig(filename= 'diceLogg.txt',level = logging.DEBUG, format = ' %(asctime)s -  %(levelname)s - %(message)s') \n",
+    "logging.basicConfig(filename= 'diceLogg.txt',level = logging.WARNING, format = ' %(asctime)s -  %(levelname)s - %(message)s') \n",
     "\n",
     "def roll_dice(sides):\n",
     "    my_roll = random.randint(1,sides)\n",
-    "    logging.warning(my_roll)\n",
+    "    logging.debug('A correct roll: ', my_roll)\n",
     "    if 0 < sides and my_roll <= sides:\n",
     "        return my_roll\n",
     "    else:\n",
