Clarified text and corrected formatting.

--- a/D6excercise.ipynb
+++ b/D6excercise.ipynb
@@ -6,15 +6,13 @@
    "source": [
     "### Exercise files, dicts and pops\n",
     "\n",
-    "Write a class that contains a __init__ that takes a filename (customers_100-csv)\n",
-    "as a parameter.\n",
-    "Add another dictionary named customerdb as an extra instance variable. (no in parameter.)\n",
+    "Write a class that contains a __init__ that takes a filename (customers_100.csv)as a parameter.Add another dictionary named customerdb as an extra instance variable. (no in parameter.)\n",
     "\n",
-    "Add a instance method ´loaddata()´ that takes the filename and loads it into the dictionary.\n",
-    "Strip away the index and make the Customer_Id (check out `.pop()`) the key for each key:value pair in the dict and add the rest of the data as the value in a list.\n",
     "\n",
-    "Add a instance method to return the Country from a record when given a Customer_id or return a message that it doesn't exist if missing.\n",
-    "Use try-except to avoid KeyErrors in the dict and file reading errors in the load()\n",
+    "Add a instance method `loaddata()` that takes the filename and loads that file into the dictionary customerdb. Strip away the index and make the Customer_Id (check out `.pop()`) the key for each key:value pair in the dict and add the rest of the data as the value in a list.\n",
+    "\n",
+    "Add a instance method to return the Country from a record when given a Customer_id or return a message that it doesn't exist if missing.Use try-except to avoid KeyErrors in the dict and file reading errors in the `loaddata()`\n",
+    "\n",
     "\n"
    ]
   },
