--- a/D6excercise.ipynb
+++ b/D6excercise.ipynb
@@ -21,7 +21,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#example element from the dictionary:\n",
+    "{\"DD37Cf93aecA6Dc\" : [\"Sheryl\",\"Baxter\",\"Rasmussen Group\",\"East Leonard\",\"Chile\",\"229.077.5154,397.884.0519x718\",\"zunigavanessa@smith.info\",\"2020-08-24\",\"http://www.stephenson.com/\"]}"
+   ]
   }
  ],
  "metadata": {
