--- a/D6excercise.ipynb
+++ b/D6excercise.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "### Bonus:\n",
     "* Add a function to the class that prints the dictionary, make it non public\n",
-    "* Add a function that returns an item from the dictionary with both key and value fields. Print the results outside in the calling code.\n",
+    "* Add a function that returns an item from the dictionary when given a Customer Id with both key and value fields. Print the results outside in the calling code.\n",
     "* Add a function that prints a row when given a Customer Id but also includes the header row in the print.\n",
     "\n",
     "\n"
